--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="img/carousel-1.jpg" class="img-fluid" alt="First slide">
+                        <img src="images/slide1.jpg" class="img-fluid" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
                                 <h6 class="text-secondary h4 animated fadeInUp">Possibility Power Conference 2024</h6>
@@ -129,11 +129,11 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/carousel-2.jpg" class="img-fluid" alt="Second slide">
+                        <img src="images/slide2.jpg" class="img-fluid" alt="Second slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
                                 <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6>
-                                <h1 class="text-white display-1 mb-4 animated fadeInLeft">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</h1>
+                                <h1 class="text-white display-1 mb-4 animated fadeInLeft"> flourish and inspire others</h1>
                                 <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
                                 <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
@@ -201,11 +201,10 @@
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
-                        <h5 class="text-primary">About Us</h5>
-                        <h1 class="mb-4">About HighTech Agency And It's Innovative IT Solutions</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur quis purus ut interdum. Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus. Etiam gravida justo nec erat vestibulum, et malesuada augue laoreet.</p>
-                        <p class="mb-4">Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus.</p>
-                        <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">More Details</a>
+                        <h5 class="text-primary">Why Attend?</h5>
+                        <p class="mb-4">Join us at RCCG Higher Ground Assembly’s Possibility Power Conference, a transformative event running for over 15 years. Experience profound spiritual growth through impactful teachings, dynamic worship, and powerful prayers. Connect with a vibrant community and gain tools to unlock your God-given potential. Don’t miss this life-changing opportunity!.</p>
+                        <!-- <p class="mb-4">Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus.</p>
+                        <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">More Details</a> -->
                     </div>
                 </div>
             </div>
@@ -304,8 +303,8 @@
         <div class="container-fluid project py-5 mb-5">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                    <h5 class="text-primary">Our Project</h5>
-                    <h1>Our Recently Completed Projects</h1>
+                    <!-- <h5 class="text-primary">Our Project</h5> -->
+                    <h1>Know The Ministers</h1>
                 </div>
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
