--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-0">
                     <a href="index.html" class="navbar-brand">
-                        <!-- <h1 class="text-white fw-bold d-block">High<span class="text-secondary">Tech</span> </h1> -->
-                        HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
-                        <p class="text-xs italic text-[#515b6b]">
+                        <!-- <div>
+                            <img src="images/logo.png" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
+                        </div>   -->
+                         <h5 class="text-white fw-bold d-block">  HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
+                          </h5>
+                          <p class="text-xs italic text-[#515b6b]">
                             Pressing Forward... Making Potentials Real
-                        </p>
+                        </p> 
+                      
                     </a>
                     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
