--- a/index.html
+++ b/index.html
@@ -399,6 +399,101 @@
         </div>
         <!-- Project End -->
 
+            <!-- Project Start -->
+            <div class="container-fluid project py-5 mb-5">
+                <div class="container">
+                    <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+                        <!-- <h5 class="text-primary">Our Project</h5> -->
+                        <h1>Concert</h1>
+                    </div>
+                    <div class="row g-5">
+                        <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                            <div class="project-item">
+                                <div class="project-img">
+                                    <img src="images/PC Pst James.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <div class="project-content">
+                                        <a href="#" class="text-center">
+                                            <h4 class="text-secondary">Pastor Ayo Olulana</h4>
+                                            <p class="m-0 text-white">SENIOR PASTOR
+                                                RCCG HIGHER GROUND ASSEMBLY</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
+                            <div class="project-item">
+                                <div class="project-img">
+                                    <img src="images/PC Cosmos.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <div class="project-content">
+                                        <a href="#" class="text-center">
+                                            <h4 class="text-secondary">Pastor Remi Olulana</h4>
+                                            <p class="m-0 text-white">SENIOR PASTOR
+                                                RCCG HIGHER GROUND ASSEMBLY</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
+                            <div class="project-item">
+                                <div class="project-img">
+                                    <img src="images/PC Josh.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <div class="project-content">
+                                        <a href="#" class="text-center">
+                                            <h4 class="text-secondary">Pastor Bayo Adewole</h4>
+                                            <p class="m-0 text-white">SENIOR PASTOR
+                                                RCCG JESUS HOUSE CHICAGO</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                            <div class="project-item">
+                                <div class="project-img">
+                                    <img src="images/PC Enkay.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <div class="project-content">
+                                        <a href="#" class="text-center">
+                                            <h4 class="text-secondary">Pastor Bayo Adeyokunnu</h4>
+                                            <p class="m-0 text-white">SENIOR PASTOR
+                                                RCCG VICTORY TEMPLE BOWIE</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
+                            <div class="project-item">
+                                <div class="project-img">
+                                    <img src="images/PC Lawrence.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <div class="project-content">
+                                        <a href="#" class="text-center">
+                                            <h4 class="text-secondary">Pastor Funmi Obilana</h4>
+                                            <p class="m-0 text-white">SENIOR PASTOR
+                                                RCCG LIVING SPRING MIRACLE CENTER</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
+                            <div class="project-item">
+                                <!-- <div class="project-img">
+                                    <img src="img/project-6.jpg" class="img-fluid w-100 rounded" alt="">
+                                    <div class="project-content">
+                                        <a href="#" class="text-center">
+                                            <h4 class="text-secondary">keyword Research</h4>
+                                            <p class="m-0 text-white">keyword Analysis</p>
+                                        </a>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Project End -->
 
         <!-- Blog Start -->
         <!-- <div class="container-fluid blog py-5 mb-5">
