--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="images/pastor1.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/ayo.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-secondary">Pastor Ayo Olulana</h4>
@@ -328,7 +328,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="images/pastor2.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/mummy.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
                                         <h4 class="text-secondary">Pastor Remi Olulana</h4>
@@ -342,12 +342,12 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="images/pastor3.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/leke.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Bayo Adewole</h4>
-                                        <p class="m-0 text-white">SENIOR PASTOR
-                                            RCCG JESUS HOUSE CHICAGO</p>
+                                        <h4 class="text-secondary">Pastor Leke Sanusi</h4>
+                                        <!-- <p class="m-0 text-white">SENIOR PASTOR -->
+                                            <!-- RCCG JESUS HOUSE CHICAGO</p> -->
                                     </a>
                                 </div>
                             </div>
@@ -413,9 +413,9 @@
                                     <img src="images/PC Pst James.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Pastor Ayo Olulana</h4>
-                                            <p class="m-0 text-white">SENIOR PASTOR
-                                                RCCG HIGHER GROUND ASSEMBLY</p>
+                                            <h4 class="text-secondary">Pastor James Okon</h4>
+                                            <!-- <p class="m-0 text-white">SENIOR PASTOR
+                                                RCCG HIGHER GROUND ASSEMBLY</p> -->
                                         </a>
                                     </div>
                                 </div>
@@ -427,9 +427,9 @@
                                     <img src="images/PC Cosmos.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Pastor Remi Olulana</h4>
-                                            <p class="m-0 text-white">SENIOR PASTOR
-                                                RCCG HIGHER GROUND ASSEMBLY</p>
+                                            <h4 class="text-secondary">Cosmos</h4>
+                                            <!-- <p class="m-0 text-white">SENIOR PASTOR -->
+                                                <!-- RCCG HIGHER GROUND ASSEMBLY</p> -->
                                         </a>
                                     </div>
                                 </div>
@@ -441,9 +441,9 @@
                                     <img src="images/PC Josh.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Pastor Bayo Adewole</h4>
-                                            <p class="m-0 text-white">SENIOR PASTOR
-                                                RCCG JESUS HOUSE CHICAGO</p>
+                                            <h4 class="text-secondary">Josh Blayze</h4>
+                                            <!-- <p class="m-0 text-white">SENIOR PASTOR -->
+                                                <!-- RCCG JESUS HOUSE CHICAGO</p> -->
                                         </a>
                                     </div>
                                 </div>
@@ -455,9 +455,9 @@
                                     <img src="images/PC Enkay.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Pastor Bayo Adeyokunnu</h4>
-                                            <p class="m-0 text-white">SENIOR PASTOR
-                                                RCCG VICTORY TEMPLE BOWIE</p>
+                                            <h4 class="text-secondary">Enkay</h4>
+                                            <!-- <p class="m-0 text-white">SENIOR PASTOR -->
+                                                <!-- RCCG VICTORY TEMPLE BOWIE</p> -->
                                         </a>
                                     </div>
                                 </div>
@@ -469,9 +469,9 @@
                                     <img src="images/PC Lawrence.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Pastor Funmi Obilana</h4>
-                                            <p class="m-0 text-white">SENIOR PASTOR
-                                                RCCG LIVING SPRING MIRACLE CENTER</p>
+                                            <h4 class="text-secondary">Min Lawrence Decovenant</h4>
+                                            <!-- <p class="m-0 text-white">SENIOR PASTOR -->
+                                                <!-- RCCG LIVING SPRING MIRACLE CENTER</p> -->
                                         </a>
                                     </div>
                                 </div>
