--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="images/pastor4.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/funmi.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Bayo Adeyokunnu</h4>
+                                        <h4 class="text-secondary">Pastor Funmi Obilana</h4>
                                         <p class="m-0 text-white">SENIOR PASTOR
-                                            RCCG VICTORY TEMPLE BOWIE</p>
+                                            RCCG LIVING SPRING MIRACLE CENTER</p>
                                     </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                        <div class="project-item">
+                        <!-- <div class="project-item">
                             <div class="project-img">
                                 <img src="images/pastor5.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
@@ -379,7 +379,7 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
