--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="images/slide1.jpg" class="img-fluid" alt="First slide">
+                        <img src="images/flyer1.jpg" class="img-fluid" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
                                 <h6 class="text-secondary h4 animated fadeInUp">Possibility Power Conference 2024</h6>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/slide2.jpg" class="img-fluid" alt="Second slide">
+                        <img src="images/flyer2.jpg" class="img-fluid" alt="Second slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
                                 <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6>
