--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <img src="images/flyer1.jpg" class="img-fluid" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h6 class="text-secondary h4 animated fadeInUp">Possibility Power Conference 2024</h6>
+                                <!-- <h6 class="text-secondary h4 animated fadeInUp">Possibility Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInRight">Seeds of Greatness </p>
                                 <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
@@ -136,7 +136,7 @@
                         <img src="images/flyer2.jpg" class="img-fluid" alt="Second slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6>
+                                <!-- <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft"> flourish and inspire others</h1>
                                 <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
                                 <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
