--- a/index.html
+++ b/index.html
@@ -795,42 +795,42 @@
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <h5 class="text-primary">Get In Touch</h5>
-                    <h1 class="mb-3">Contact for any query</h1>
-                    <p class="mb-2">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <!-- <h1 class="mb-3">Contact for any query</h1>
+                    <p class="mb-2">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                 </div>
                 <div class="contact-detail position-relative p-5">
                     <div class="row g-5 mb-5 justify-content-center">
                         <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".3s">
                             <div class="d-flex bg-light p-3 rounded">
-                                <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
+                                <!-- <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
                                     <i class="fas fa-map-marker-alt text-white"></i>
-                                </div>
-                                <div class="ms-3">
+                                </div> -->
+                                <!-- <div class="ms-3">
                                     <h4 class="text-primary">Address</h4>
                                     <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">23 rank Str, NY</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".5s">
                             <div class="d-flex bg-light p-3 rounded">
-                                <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
+                                <!-- <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
                                     <i class="fa fa-phone text-white"></i>
-                                </div>
-                                <div class="ms-3">
+                                </div> -->
+                                <!-- <div class="ms-3">
                                     <h4 class="text-primary">Call Us</h4>
                                     <a class="h5" href="tel:+0123456789" target="_blank">+012 3456 7890</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".7s">
                             <div class="d-flex bg-light p-3 rounded">
-                                <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
+                                <!-- <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
                                     <i class="fa fa-envelope text-white"></i>
                                 </div>
                                 <div class="ms-3">
                                     <h4 class="text-primary">Email Us</h4>
                                     <a class="h5" href="mailto:info@example.com" target="_blank">info@example.com</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
