--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
 
         <!-- Team Start -->
-        <!-- <div class="container-fluid py-5 mb-5 team">
+        <div class="container-fluid py-5 mb-5 team">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <h5 class="text-primary">Our Team</h5>
@@ -689,7 +689,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
         <!-- Team End -->
 
         <!-- Testimonial Start -->
