--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div> -->
         <!-- Topbar End -->
 
-        <!-- Navbar Start -->
-        <div class="container-fluid bg-primary">
+        <!-- Navbar Start   bg-primary-->
+        <div class="container-fluid" style="background-color: #FFFFFF;">
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-0">
                     <a href="index.html" class="navbar-brand">
@@ -369,18 +369,18 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                        <!-- <div class="project-item">
+                        <div class="project-item">
                             <div class="project-img">
-                                <img src="images/pastor5.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/bayoguy.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Funmi Obilana</h4>
-                                        <p class="m-0 text-white">SENIOR PASTOR
-                                            RCCG LIVING SPRING MIRACLE CENTER</p>
+                                        <h4 class="text-secondary">Pastor Bayo Adewole</h4>
+                                        <!-- <p class="m-0 text-white">SENIOR PASTOR
+                                            RCCG LIVING SPRING MIRACLE CENTER</p> -->
                                     </a>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
